Submitting Intro to HTML and CSS Exercises

--- a/module-3/01_Intro_HTML_CSS/student-exercise/info-form/index.html
+++ b/module-3/01_Intro_HTML_CSS/student-exercise/info-form/index.html
@@ -5,12 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Form of Surrender</title>
+        <link rel="stylesheet" href="../css/form-styles.css">
     </head>
 
     <body>
         <main>
             <h1>Official Waiver of Terrestrial Homeworld Rights and Interplanetary Abduction Consent Form</h1>
-            <h3>Surrender To Us Your Personal Information Below*</h3>
+            <h2>Surrender To Us Your Personal Information Below*</h2>
             
             <form action="http://www.aliensrulehumansdrool.gov/api/formsofsurrender" method="POST">
                 <label for="name">Name:</label>
@@ -70,7 +71,7 @@
             </form>
         </main>
         <footer>
-            <h6>*We promise to use the information submitted solely to locate and identify your loved ones so as to thoroughly eliminate any and all remaining life on this poor excuse of a planet.</h6>
+            <h6>*We promise to use the information submitted solely to locate and identify your loved ones so as to thoroughly eliminate any and all remaining life on this poor excuse for a planet.</h6>
             <p>2020 Copyright &copy; Definitely Totally Not Aliens, INC</p>
         </footer>
     </body>
