--- a/module-3/01_Intro_HTML_CSS/student-lecture/site/index.html
+++ b/module-3/01_Intro_HTML_CSS/student-lecture/site/index.html
@@ -11,12 +11,14 @@
     </head>
     <body>
         <!-- anything in the body is "displayed" on the page -->
-        
+        <!--
+
         <div id="header">
             <h1>Bits & Bytes</h1>
                 <p>Welcome to the internet's best restaurant!</p>
         </div>
-        <!-- ^^^ and vvv are exactly the same, but vvv employs Semantic HTML which adds more
+
+         ^^^ and vvv are exactly the same, but vvv employs Semantic HTML which adds more
         meaning to our code-->
         <header>
             <h1>Bits & Bytes</h1>
@@ -34,11 +36,19 @@
             <section>
             
                 <h3>Lunch</h3>
-                <p>Full Stack Sandwich</p>
-                <img src="images/menu/lunch/full-stack-sandwich.png" alt="Full Stack Sandwich picture">
-                <p>Universal Serial Burger</p> 
-                <img src="images/menu/lunch/USBurger.png" alt="USBurger picture">
 
+                <table>
+                    <tr>
+                        <td>Full Stack Sandwich: </td>
+                        <td>$5.99</td>
+                        <td><img src="images/menu/lunch/full-stack-sandwich.png" alt="Full Stack Sandwich picture"></td>
+                    </tr>
+                    <tr>
+                        <td>Universal Serial Burger: </td>
+                        <td>$8.99</td>
+                        <td><img src="images/menu/lunch/USBurger.png" alt="USBurger picture"></td>
+                    </tr>                    
+                 </table>
             </section>
 
             <section>
