Committing work from lecture

--- a/module-3/12_Flexbox/student-lecture/index.html
+++ b/module-3/12_Flexbox/student-lecture/index.html
@@ -17,11 +17,12 @@
         <footer>
             Bits and Bytes
             <span>
-                <a href="#featured"">Featured Items</a> | <a href=" #all-items">All
+                <a href="#featured">Featured Items</a> | <a href=" #all-items">All
                     Items</a>
             </span>
         </footer>
     </section>
+
     <section id="featured">
         <header>Featured Menu Items</header>
         <section>
@@ -49,11 +50,12 @@
         </section>
 
     </section>
+
     <section id="all-items">
         <header>All Menu Items</header>
         <section>
             <article>
-                <div><i class="fas fa-pizza-slice fa-7x"> </i></div>
+                <div><i class="fas fa-pizza-slice fa-6x"> </i></div>
                 <div>
                     <header>Pizza By the Slice</header>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perspiciatis tempora adipisci
@@ -62,16 +64,40 @@
                         deleniti optio, temporibus libero ad veritatis dolorem totam vero.</p>
                 </div>
             </article>
+
             <article>
-                <div><i class="fas fa-ice-cream fa-7x"> </i></div>
+                <div><i class="fas fa-ice-cream fa-6x"> </i></div>
                 <div>
-                    <header>Custard - Yum!</header>
+                    <header>Ice Cream</header>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perspiciatis tempora adipisci
                         provident vero, blanditiis doloremque maiores neque suscipit velit saepe consequatur error odit
                         amet corporis facere dolorem illo? Excepturi optio earum suscipit. Natus repellendus expedita
                         deleniti optio, temporibus libero ad veritatis dolorem totam vero.</p>
                 </div>
             </article>
+
+            <article>
+                <div><i class="fas fa-hamburger fa-6x"> </i></div>
+                <div>
+                    <header>Hamburger</header>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perspiciatis tempora adipisci
+                        provident vero, blanditiis doloremque maiores neque suscipit velit saepe consequatur error odit
+                        amet corporis facere dolorem illo? Excepturi optio earum suscipit. Natus repellendus expedita
+                        deleniti optio, temporibus libero ad veritatis dolorem totam vero.</p>
+                </div>
+            </article>
+
+            <article>
+                <div><i class="fas fa-hotdog fa-6x"> </i></div>
+                <div>
+                    <header>Polish Sausage</header>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perspiciatis tempora adipisci
+                        provident vero, blanditiis doloremque maiores neque suscipit velit saepe consequatur error odit
+                        amet corporis facere dolorem illo? Excepturi optio earum suscipit. Natus repellendus expedita
+                        deleniti optio, temporibus libero ad veritatis dolorem totam vero.</p>
+                </div>
+            </article>
+
         </section>
     </section>
 </body>
