--- a/module-3/12_Flexbox/student-tutorial/index.html
+++ b/module-3/12_Flexbox/student-tutorial/index.html
@@ -6,10 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>News</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="flexbox.css">
 </head>
 
 <body>
   <div class="container">
+    <header id="page-header">
+      <img src="news_logo.png" alt="a picture of a news logo" />
+      <input type="search" placeholder="Search..." id="search" />
+      <nav>
+        <ul>
+          <li><a href="#">Our Mission</a></li>
+          <li><a href="#">Our Team</a></li>
+          <li><a href="#">Login</a></li>
+        </ul>
+      </nav>
+    </header>
     <section id="left-panel">
       <nav>
         <menu>
@@ -138,6 +150,38 @@
         <p>Lorem, ipsum dolor.</p>
         <hr>
         <p>Lorem ipsum dolor sit amet cons adipi sicing elit. Aliquam consequuntur natus illo?</p>
+      </article>
+    </aside>
+    <aside id="weather">
+      <article>
+        <header>Weather</header>
+        <section>
+          <p>
+            <span class="day">Today:</span>
+            <span class="forecast">Sunny ☀️</span>
+            <span class="temperature">High: 67 | Low: 56</span>
+          </p>
+          <p>
+            <span class="day">Tomorrow:</span>
+            <span class="forecast">Cloudy ⛅</span>
+            <span class="temperature">High: 54 | Low: 49</span>
+          </p>
+          <p>
+            <span class="day">Saturday:</span>
+            <span class="forecast">Sunny ☀️</span>
+            <span class="temperature">High: 78 | Low: 62</span>
+          </p>
+          <p>
+            <span class="day">Sunday:</span>
+            <span class="forecast">Sunny ☀️</span>
+            <span class="temperature">High: 73 | Low: 58</span>
+          </p>
+          <p>
+            <span class="day">Monday:</span>
+            <span class="forecast">Thunderstorms ⛈️</span>
+            <span class="temperature">High: 56 | Low: 49</span>
+          </p>
+        </section>
       </article>
     </aside>
   </div>
