Submitting Mini-Exercises portion of Flexbox Exercises

--- a/module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
+++ b/module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
@@ -14,7 +14,7 @@
         </header>
 
         <main>
-            <img src="/img/contortionistBandPhoto.png" alt="A photo of all 6 members of The Contortionist covered in foliage." class="center" /> <br />
+            <img src="../img/contortionistBandPhoto.png" alt="A photo of all 6 members of The Contortionist covered in foliage." class="center" /> <br />
             <section>
                 <h2>Albums by Year Released</h2>
                     <table>
