Updating lecture code

--- a/module-3/20_Introduction_to_JavaScript/student-lecture/index.html
+++ b/module-3/20_Introduction_to_JavaScript/student-lecture/index.html
@@ -8,6 +8,12 @@
 
     <!-- Reference to external javascript file -->
     <script src="script.js"></script>
+    <script lang="javascript">
+        function sayHello()
+        {
+            console.log("Hello there!")
+        }
+    </script>
 </head>
 <body>
     
