Committing JS Functions tutorial

--- a/module-3/22_DOM/review/review.html
+++ b/module-3/22_DOM/review/review.html
@@ -8,7 +8,11 @@
         <script src="review.js"></script>
     </head>
     <body>
-        <h1>People and Names</h1>
-        <div id="names"></div>
+        <h1>Customers</h1>
+        <!-- placeholder for all customers-->
+        <div id="names">
+        
+
+        </div>
     </body>
 </html>
