--- a/module-3/23_Event_Handling/student-lecture/product-reviews/index.html
+++ b/module-3/23_Event_Handling/student-lecture/product-reviews/index.html
@@ -15,12 +15,12 @@
     <div id="main" class="mx-auto">
 
         <h2 id="page-title">Product Reviews for <span class="name"></span></h2>
-        <p class="description"></p>
+        <p id="description" class="description"></p>
         <input id="inputDesc" class="d-none form-control form-control-lg" type="text"/>
         <div class="clearfix"></div>
 
         <div class="float-right">
-            <button id="btnToggleForm" type="button" class="btn btn-outline-success btn-sm"">Add Review</button>
+            <button id="btnToggleForm" type="button" class="btn btn-outline-success btn-sm">Add Review</button>
         </div>
 
         <div class="clearfix"></div>
